# norfair

./: .pre-commit-config.yaml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docs.yml
demos/3d_track/src/: demo.py  utils.py
demos/alphapose/: setup.py  writer.py
demos/camera_motion/src/: demo.py
demos/colab/: colab_demo.ipynb  demo.py  requirements.txt  yolo.py
demos/detectron2/: Dockerfile  README.md
demos/detectron2/src/: demo.py
demos/keypoints_bounding_boxes/: README.md
demos/keypoints_bounding_boxes/src/: demo.py
demos/mmdetection/: mmdetection_cars.py
demos/mmdetection/src/: demo.py
demos/motmetrics4norfair/src/: motmetrics4bytetrack.py  motmetrics4norfair.py  motmetrics4norfair_xyah.py
demos/openpose/: README.md  requirements.txt
demos/openpose/src/: demo.py
demos/profiling/src/: demo.py  utils.py
demos/reid/: requirements.txt
demos/reid/src/: demo.py  utils.py  video_generator.py
demos/sahi/src/: utils.py
demos/yolo_nas/: Dockerfile  README.md  requirements.txt
demos/yolo_nas/src/: demo.py
demos/yolopv2/: Dockerfile  requirements.txt  run_gpu.sh
demos/yolopv2/src/: demo.py  utils.py
demos/yolov4/: requirements.txt
demos/yolov4/src/: demo.py
demos/yolov5/src/: demo.py
demos/yolov7/src/: demo.py
docs/: deploy_docs.py  requirements.txt
docs/css/: custom.css
docs/reference/: camera_motion.md  distances.md  filter.md  metrics.md  tracker.md  utils.md  video.md
norfair/: __init__.py  camera_motion.py  distances.py  filter.py  metrics.py  tracker.py  video.py
norfair/drawing/: __init__.py  absolute_grid.py  color.py  draw_boxes.py  draw_points.py  drawer.py  fixed_camera.py  path.py  utils.py
tests/: conftest.py  metrics.txt  mot_metrics.py  test_distances.py  test_drawing.py  test_tracker.py
